--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <body>
     <h1>Ez a honlapom</h1>
+    <h2>Kedvenc állataim:</h2>
     <ul>
-        <li>sdfsdf</li>
-        <li>asdsad</li>
+        <li>Cica</li>
+        <li>Kutya</li>
     </ul>
 </body>
