--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <body>
     <h1>Ez a honlapom</h1>
+    <a href="bemut.html">bemut.html</a>
     <h2>Kedvenc állataim:</h2>
     <ul>
         <li>Cica</li>
