--- a/index.html
+++ b/index.html
@@ -1,9 +1,102 @@
+<head>
+    <title>Honlap</title>
+</head>
 <body>
-    <h1>Ez a honlapom</h1>
-    <a href="bemut.html">bemut.html</a>
-    <h2>Kedvenc állataim:</h2>
-    <ul>
-        <li>Cica</li>
-        <li>Kutya</li>
-    </ul>
+    <h1>
+        Ez a honlapom
+    </h1>
+    <h2>
+        <a href="bemut">Bemutatkozom</a>
+    Ezek a kedvenc éeleim:
+    <li>Csirkepörkölt</li>
+    <li> Hamburger</li>
+    </h2>
 </body>
+<style>
+    h1 {
+        text-align: center;
+        background-color: aqua;
+        border-radius: 10px;
+        box-shadow: 1px 1px 4px black;
+        text-shadow: 1px 1px 4px gray;
+    }
+    td {
+        background-color: aquamarine;
+        width: 50px;
+        height: 30px;
+        border-radius: 10px;
+        box-shadow: 1px 1px 4px black;
+        text-shadow: 1px 1px 4px gray;
+        text-align: center;
+    }
+    table {
+        margin: auto;
+    }
+    div.x {
+        text-align: center;
+    }
+</style>
+<div class="x">
+    <table>
+        <tr>
+            <td>1</td>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>3</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+    </table>
+</div>
