--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         Ez a honlapom
     </h1>
     <h2>
-        <a href="bemut">Bemutatkozom</a>
-    Ezek a kedvenc éeleim:
+    Ezek a kedvenc ételeim:
     <li>Csirkepörkölt</li>
     <li> Hamburger</li>
     </h2>
