--- a/index.html
+++ b/index.html
@@ -1,101 +1,35 @@
-<head>
-    <title>Honlap</title>
-</head>
+<!DOCTYPE html>
 <body>
+    <head>
+<meta charset="UTF-8">
+
+        <title> Honlap</title>
+        <link rel="stylesheet" href="style.css  ">
+    </head>
     <h1>
-        Ez a honlapom
+        Ez a honlapom!
     </h1>
+   
     <h2>
-    Ezek a kedvenc ételeim:
-    <li>Csirkepörkölt</li>
-    <li> Hamburger</li>
+        <a href="bemut.html">Tudj meg rólam többet</a>
+        <p>
+            <a href="https://hu.wikipedia.org/wiki/Mazsorett">Sport</a>
+        </p>
+        <p>
+            <a href="ora.html">Órarend</a>
+        </p>
     </h2>
+    <div class="background-image"></div>
+  
 </body>
 <style>
-    h1 {
-        text-align: center;
-        background-color: aqua;
-        border-radius: 10px;
-        box-shadow: 1px 1px 4px black;
-        text-shadow: 1px 1px 4px gray;
-    }
-    td {
-        background-color: aquamarine;
-        width: 50px;
-        height: 30px;
-        border-radius: 10px;
-        box-shadow: 1px 1px 4px black;
-        text-shadow: 1px 1px 4px gray;
-        text-align: center;
-    }
-    table {
-        margin: auto;
-    }
-    div.x {
-        text-align: center;
-    }
-</style>
-<div class="x">
-    <table>
-        <tr>
-            <td>1</td>
-            <td>1</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>3</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-        <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-        </tr>
-    </table>
-</div>
+    .background-image{
+  background-image: url(hill.jpg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  width: 200px;
+height: 100vh
+
+}
+
+  </style>
