--- a/bemut.html
+++ b/bemut.html
@@ -1,1 +1,22 @@
-Bemutatkozom
+<!DOCTYPE html>
+<body>
+    <head>
+<meta charset="UTF-8">
+
+        <title>Bemutatkozás</title>
+    </head>
+    <h1>
+        Ez a honlapom
+    </h1>
+    <p>
+        A teljes nevem Török Dóra.
+        Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
+       
+    </p>
+    <a href="honlap.html">Vissza a főoldalra</a>
+    <style>
+        h1{
+            text-align: center;
+        }
+    </style>
+</body>
