--- a/bemut.html
+++ b/bemut.html
@@ -1,22 +1,28 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title>Bemutatkozás</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <head>
-<meta charset="UTF-8">
-
-        <title>Bemutatkozás</title>
-    </head>
-    <h1>
-        Ez a honlapom
-    </h1>
-    <p>
-        A teljes nevem Török Dóra.
-        Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
-       
-    </p>
-    <a href="honlap.html">Vissza a főoldalra</a>
-    <style>
-        h1{
-            text-align: center;
-        }
-    </style>
+    <nav>
+        <ul>
+            <li><a href="index.html">Kezdőlap</a></li>
+            <li class="active"><a href="bemut.html">Tudj meg rólam többet</a></li>
+            <li><a href="sport.html">Sport</a></li>
+            <li><a href="orarend.html">Órarend</a></li>
+        </ul>
+    </nav>
+    <main>
+        <div class="content">
+            <h1>
+                Ez a honlapom
+            </h1>
+            <p>
+                A teljes nevem Török Dóra.
+                Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
+               
+            </p>
+        </div>
+    </main>
 </body>
