--- a/index.html
+++ b/index.html
@@ -1,35 +1,25 @@
 <!DOCTYPE html>
+<head>
+    <meta charset="UTF-8">
+    <title> Honlap</title>
+    <link rel="stylesheet" href="style.css  ">
+</head>
 <body>
-    <head>
-<meta charset="UTF-8">
+    
+    <nav>
+        <ul>
+            <li class="active"><a href="index.html">Kezdőlap</a></li>
+            <li><a href="bemut.html">Tudj meg rólam többet</a></li>
+            <li><a href="sport.html">Sport</a></li>
+            <li><a href="orarend.html">Órarend</a></li>
+        </ul>
+    </nav>
 
-        <title> Honlap</title>
-        <link rel="stylesheet" href="style.css  ">
-    </head>
-    <h1>
-        Ez a honlapom!
-    </h1>
+    <main>
+        <div class="content">
+            <h1>Török Dóra</h1>
+            <div class="aboutButton"><a href="bemut.html" >Tudj meg többet rólam!</a></div>
+        </div>
+    </main>
    
-    <h2>
-        <a href="bemut.html">Tudj meg rólam többet</a>
-        <p>
-            <a href="https://hu.wikipedia.org/wiki/Mazsorett">Sport</a>
-        </p>
-        <p>
-            <a href="ora.html">Órarend</a>
-        </p>
-    </h2>
-    <div class="background-image"></div>
-  
 </body>
-<style>
-    .background-image{
-  background-image: url(hill.jpg);
-  background-size: contain;
-  background-repeat: no-repeat;
-  width: 200px;
-height: 100vh
-
-}
-
-  </style>
