--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <li><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
+            <li><a href="svg.html">SVG</a></li>
         </ul>
     </nav>
 
