--- a/svg.html
+++ b/svg.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>My first SVG</h1>
+<h1>Az első SVG</h1>
 
 <svg width="1000" height="700">
     <circle cx="150" cy="250" r="40" stroke="green" stroke-width="1" fill="yellow" />
