--- a/bemut.html
+++ b/bemut.html
@@ -11,6 +11,8 @@
             <li class="active"><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
+            <li><a href="svg.html"></a>SVG</li>
+            <li><a href="github.html"></a>GitHub</li>
         </ul>
     </nav>
     <main>
