--- a/svg.html
+++ b/svg.html
@@ -1,8 +1,27 @@
 <!DOCTYPE html>
 <html>
+ <head>
+    <meta charset="UTF-8">
+    <title> SVG</title>
+    <link rel="stylesheet" href="style.css">
+ </head>   
+
 <body>
 
-<h1>Az első SVG</h1>
+    <nav>
+        <ul>
+            <li><a href="index.html">Kezdőlap</a></li>
+            <li><a href="bemut.html">Tudj meg rólam többet</a></li>
+            <li><a href="sport.html">Sport</a></li>
+            <li><a href="orarend.html">Órarend</a></li>
+            <li class="active"><a href="svg.html">SVG</a></li>
+            <li><a href="github.html"></a>GitHub</li>
+        </ul>
+    </nav>
+</body>
+
+
+    <h1>Az első SVG</h1>
 
 <svg width="1000" height="700">
     <circle cx="150" cy="250" r="40" stroke="green" stroke-width="1" fill="yellow" />
