--- a/svg.html
+++ b/svg.html
@@ -15,7 +15,7 @@
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li class="active"><a href="svg.html">SVG</a></li>
-            <li><a href="github.html"></a>GitHub</li>
+            <li><a href="https://github.com/torokdora">GitHub</a></li>
         </ul>
     </nav>
 </body>
