--- a/bemut.html
+++ b/bemut.html
@@ -11,8 +11,8 @@
             <li class="active"><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
-            <li><a href="svg.html"></a>SVG</li>
-            <li><a href="github.html"></a>GitHub</li>
+            <li><a href="svg.html">SVG</a></li>
+            <li><a href="https://github.com/torokdora">GitHub</a></li>
         </ul>
     </nav>
     <main>
