--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
-            <li><a href="github.html"></a>GitHub</li>
+            <li><a href="https://github.com/torokdora"></a>GitHub</li>
         </ul>
     </nav>
 
