--- a/orarend.html
+++ b/orarend.html
@@ -13,7 +13,7 @@
             <li><a href="sport.html">Sport</a></li>
             <li class="active"><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
-            <li><a href="https://github.com/torokdora">GitHub</a></li>
+            <li><a href="github.html">GitHub</a></li>
         </ul>
     </nav>
     <table class="orarend" cellspacing="5px" cellpadding="5px">
