--- a/bemut.html
+++ b/bemut.html
@@ -12,7 +12,7 @@
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
-            <li><a href="github.html">GitHub</a></li>
+            <li><a href="https://github.com/torokdora">GitHub</a></li>
         </ul>
     </nav>
     <main>
