--- a/github.html
+++ b/github.html
@@ -13,11 +13,11 @@
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
-            <li class="active"><a href="github.html">GitHub</a></li>
+            <li class="active"><a href="https://github.com/torokdora">GitHub</a></li>
         </ul>
     </nav>
 
-<a href="https://github.com/torokdora">GitHub</a>
+
 
 
 
