--- a/bemut.html
+++ b/bemut.html
@@ -24,6 +24,7 @@
                 A teljes nevem Török Dóra.
                 Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
                
+                <img src="DSC_0490.JPG" alt="">
             </p>
         </div>
     </main>
