--- a/bemut.html
+++ b/bemut.html
@@ -24,6 +24,8 @@
                 A teljes nevem Török Dóra.
                 Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
                
+                <img src="IMG_2978.JPEG" alt="">
+
             </p>
         </div>
     </main>
