--- a/bemut.html
+++ b/bemut.html
@@ -23,8 +23,7 @@
             <p>
                 A teljes nevem Török Dóra.
                 Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
-               
-                <img src="IMG_2978.JPEG" alt="">
+               <br><img src="IMG_2978.JPEG" alt="Ő a kutyám: Ricky">
 
             </p>
         </div>
