--- a/bemut.html
+++ b/bemut.html
@@ -23,7 +23,7 @@
             <p>
                 A teljes nevem Török Dóra.
                 Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
-               <br><img src="IMG_2978.JPEG" alt="Ő a kutyám: Ricky">
+               <br><img src="../honlap/IMG_2978.JPEG" alt="Ricky" width="500" height="600">
 
             </p>
         </div>
