--- a/bemut.html
+++ b/bemut.html
@@ -23,7 +23,7 @@
             <p>
                 A teljes nevem Török Dóra.
                 Az SZTE Gyakorló Gimnázium és Általános iskolába járok biológia-fizika-kémia szakra.
-               <br> <img src="DSC_0502.JPG" alt="Ő itt a kutyám Ricky">
+               <br> <img src="../honlap/DSC_0502.JPG" alt="Ő itt a kutyám Ricky">
             </p>
         </div>
     </main>
