--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
+            <li><a href="amoba.html">Amőba</a></li>
         </ul>
     </nav>
 
