--- a/jatek.html
+++ b/jatek.html
@@ -1,29 +1,22 @@
 <!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
-    <title> Honlap</title>
-    <link rel="stylesheet" href="style.css  ">
+    <title>Játékok</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Kezdőlap</a></li>
+            <li><a href="index.html">Kezdőlap</a></li>
             <li><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
-            <li><a href="jatek.html">Játékok</a></li>
+            <li class="active"><a href="jatek.html">Játékok</a></li>
         </ul>
     </nav>
-
-    <main>
-        <div class="content">
-            <h1>Török Dóra</h1>
-            <div class="aboutButton"><a href="bemut.html" >Tudj meg többet rólam!</a></div>
-        </div>
-    </main>
+<a href="amoba.html">Amőba</a>
 
 
 </body>
