--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
-            <li><a href="jatek.html">Játékok</a></li>
+            <li><a href="hazik.html">Játékok</a></li>
         </ul>
     </nav>
 
