--- a/hazik.html
+++ b/hazik.html
@@ -9,11 +9,16 @@
 </head>
 <body>
       <h1>Játékok</h1>
-      <div class="container">
-            <div class="buttons">
-                <a href="tron.html" class="btn btn-3">Tron</a>
-                <a href="amoba.html" class="btn btn-3">Amőba</a>
-                <a href="index.html" class="btn btn-3">Vissza</a></div>
-        </div>
+      <nav>
+            <ul>
+                <li><a href="index.html">Kezdőlap</a></li>
+                <li><a href="bemut.html">Tudj meg rólam többet</a></li>
+                <li><a href="sport.html">Sport</a></li>
+                <li><a href="orarend.html">Órarend</a></li>
+                <li><a href="svg.html">SVG</a></li>
+                <li><a href="https://github.com/torokdora">GitHub</a></li>
+                <li class="active"><a href="hazik.html">Játékok</a></li>
+            </ul>
+        </nav>
 </body>
 </html>
