--- a/hazik.html
+++ b/hazik.html
@@ -4,11 +4,11 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="stylesheet" href="haziku.css">
+      <link rel="stylesheet" href="style.css">
       <title>Játék</title>
 </head>
 <body>
-      <h1>Játékok</h1>
+      <link rel="stylesheet" href="haziku.css">
       <nav>
             <ul>
                 <li><a href="index.html">Kezdőlap</a></li>
@@ -20,5 +20,14 @@
                 <li class="active"><a href="hazik.html">Játékok</a></li>
             </ul>
         </nav>
-</body>
+            <link rel="stylesheet" href="haziku.css">
+            <div class="container">
+                  <div class="buttons">
+                      <a href="tron.html" class="btn btn-3">Tron</a>
+                      <a href="amoba.html" class="btn btn-3">Amőba</a>
+                      <a href="index.html" class="btn btn-3">Vissza</a></div>
+              </div>
+      </nav>
+      
+      </body>
 </html>
