--- a/orarend.html
+++ b/orarend.html
@@ -14,6 +14,7 @@
             <li class="active"><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
+            <li><a href="hazik.html"></a>Játékok</li>
         </ul>
     </nav>
     <table class="orarend" cellspacing="5px" cellpadding="5px">
