--- a/sport.html
+++ b/sport.html
@@ -12,7 +12,10 @@
             <li><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li class="active"><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
+            <li><a href="svg.html"></a>SVG</li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
+            <li><a href="hazik.html"></a>Játékok</li>
+            
         </ul>
     </nav>
     <iframe src="https://hu.wikipedia.org/wiki/Mazsorett" frameborder="0" style="position: absolute; height: 90%; width: 100%;"></iframe>
