--- a/bemut.html
+++ b/bemut.html
@@ -13,7 +13,7 @@
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
-            <li><a href="hazik.html"></a>Játék</li>
+            <li><a href="hazik.html"></a>Játékok</li>
         </ul>
     </nav>
     <main>
