--- a/github.html
+++ b/github.html
@@ -14,6 +14,7 @@
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li class="active"><a href="https://github.com/torokdora">GitHub</a></li>
+            <li><a href="hazik.html"></a>Játékok</li>
         </ul>
     </nav>
 
