--- a/svg.html
+++ b/svg.html
@@ -22,7 +22,7 @@
 </body>
 
 
-    <h1>Az első SVG</h1>
+    <h1>Az első SVG-m</h1>
 
 <svg width="1000" height="700">
     <circle cx="150" cy="250" r="40" stroke="green" stroke-width="1" fill="yellow" />
