--- a/svg.html
+++ b/svg.html
@@ -25,9 +25,11 @@
     <h1>Az első SVG-m</h1>
 
 <svg width="1000" height="700">
-    <circle cx="150" cy="250" r="40" stroke="green" stroke-width="1" fill="yellow" />
+    <circle id="o"
+    cx="150" cy="250" r="40" stroke="black" stroke-width="1" fill="purpule" />
     <circle id="c"
-    cx="50" cy="50" r="40" stroke="green" stroke-width="1" fill="yellow" />
+    cx="50" cy="50" r="40" stroke="black" stroke-width="1" fill="white" />
+    
    
 
 </svg> 
@@ -47,6 +49,10 @@
     setInterval (v=> {
         document.getElementById ("c").setAttribute ("cx",x) 
         if (x<800) x += 1},10 )
+    y = 50
+    setInterval (v=> {
+        document.getElementById ("o").setAttribute("oy",y)
+        if (y<800)  y+= 1}, 10)
 </script>
 
 </html>
