--- a/svg.html
+++ b/svg.html
@@ -17,6 +17,7 @@
             <li class="active"><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
+            <li><a href="hazifeladat.html"></a></li>
         </ul>
     </nav>
 </body>
