--- a/animation.html
+++ b/animation.html
@@ -8,23 +8,13 @@
     
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Kezdőlap</a> </li>
+            <li><a href="index.html">Kezdőlap</a> </li>
             <li><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li><a href="hazifeladat.html">Házik</a></li>
+            <li class="active"><a href="hazifeladat.html">Házik</a></li>
         </ul>
     </nav>
-
-    <main>
-        <div class="content">
-            <h1>Török Dóra</h1>
-            <div class="aboutButton"><a href="bemut.html" >Tudj meg többet rólam!</a></div>
-        </div>
-    </main>
-
-
-</body>
