--- a/hazik.html
+++ b/hazik.html
@@ -14,7 +14,7 @@
                 <li><a href="svg.html">SVG</a></li>
                 <li><a href="https://github.com/torokdora">GitHub</a></li>
                 <li class="active"><a href="hazik.html">Játékok</a></li>
-                <li><a href="hazifeladat.html"></a></li>
+                <li><a href="hazifeladat.html">Házik</a></li>
             </ul>
         </nav>
             <link rel="stylesheet" href="haziku.css">
