--- a/github.html
+++ b/github.html
@@ -15,7 +15,7 @@
             <li><a href="svg.html">SVG</a></li>
             <li class="active"><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li><a href="hazifeladat.html"></a></li>
+            <li><a href="hazifeladat.html">Házik</a></li>
         </ul>
     </nav>
 
