--- a/hazifeladat.html
+++ b/hazifeladat.html
@@ -8,12 +8,23 @@
     
     <nav>
         <ul>
-            <li class="active"><a href="index.html">Kezdőlap</a> </li>
+            <li><a href="index.html">Kezdőlap</a> </li>
             <li><a href="bemut.html">Tudj meg rólam többet</a></li>
             <li><a href="sport.html">Sport</a></li>
             <li><a href="orarend.html">Órarend</a></li>
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li><a href="hazifeladat.html"></a></li>
-            
+            <li class="active"><a href="hazifeladat.html">Házik</a></li>
+        </ul>
+    </nav>
+    <link rel="stylesheet" href="haziku.css">
+    <div class="container">
+    <div class="buttons"></div>
+              <a href="keypad.html" class="btn btn-3">Első</a>
+              <a href="keyboard.html" class="btn btn-3">Második</a>
+              <a href="animation.html" class="btn btn-3">Harmadik</a></div>
+      </div>
+    <nav>
+
+    </nav>
