--- a/keyboard.html
+++ b/keyboard.html
@@ -18,3 +18,17 @@
             <li class="active"><a href="hazifeladat.html">Házik</a></li>
         </ul>
     </nav>
+    <nav>
+        <ul>
+            <link rel="stylesheet" href="keyboard.css">
+        </ul>
+    </nav>
+    <main>
+        <table>
+            <tr>
+                <td>
+                
+                </td>
+            </tr>
+        </table>
+    </main>
