--- a/keypad.html
+++ b/keypad.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title> Honlap</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="keypad.css">
 </head>
 <body>
     
@@ -18,3 +18,33 @@
             <li class="active"><a href="hazifeladat.html">Házik</a></li>
         </ul>
     </nav>
+
+        <table>
+            <tr>
+                <td style="background-color: rgba(89, 188, 157, 0.753);"></td>
+                <td a></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td style="background-color: rgb(186, 223, 53);">1</td>
+                <td style="background-color: rgb(186, 223, 53);">2</td>
+                <td style="background-color: rgb(186, 223, 53);">3</td>
+            </tr>
+            <tr>
+                <td style="background-color: rgb(186, 223, 53);">4</td>
+                <td style="background-color: rgb(186, 223, 53);">5</td>
+                <td style="background-color: rgb(186, 223, 53);">6</td>
+            </tr>
+            <tr>
+                <td style="background-color: rgb(186, 223, 53);">7</td>
+                <td style="background-color: rgb(186, 223, 53);">8</td>
+                <td style="background-color: rgb(186, 223, 53);">9</td>
+            </tr>
+            <tr>
+                <td style="background-color: rgba(89, 188, 157, 0.753);" >C</td>
+                <td style="background-color: rgb(186, 223, 53);">0</td>
+            </tr>
+        </table>
+    </nav>
+        
+    </main>
