--- a/hazifeladat.html
+++ b/hazifeladat.html
@@ -24,6 +24,8 @@
               <a href="keypad.html" class="btn btn-3">Első</a>
               <a href="keyboard.html" class="btn btn-3">Második</a>
               <a href="animation.html" class="btn btn-3">Harmadik</a></div>
+               <a href="x.html" class="btn btn-3">Negyedik</a></div>
+                
       </div>
     <nav>
 
