--- a/hazifeladat.html
+++ b/hazifeladat.html
@@ -15,15 +15,9 @@
             <li><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li class="active"><a href="hazifeladat.html">Házik</a></li>
+            <li class="active"><a href="bar.html">Házik</a></li>
         </ul>
     </nav>
-    <link rel="stylesheet" href="haziku.css">
-    <div class="container">
-    <div class="buttons"></div>
-              <a href="keypad.html" class="btn btn-3">Első</a>
-              <a href="keyboard.html" class="btn btn-3">Második</a>
-              <a href="animation.html" class="btn btn-3">Harmadik</a></div>
       </div>
     <nav>
 
