--- a/svg.html
+++ b/svg.html
@@ -17,7 +17,7 @@
             <li class="active"><a href="svg.html">SVG</a></li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li><a href="hazifeladat.html">Házik</a></li>
+            <li><a href="bar.html">Házik</a></li>
         </ul>
     </nav>
 </body>
