--- a/keypad.html
+++ b/keypad.html
@@ -19,32 +19,4 @@
         </ul>
     </nav>
 
-        <table>
-            <tr>
-                <td style="background-color: rgba(89, 188, 157, 0.753);"></td>
-                <td a></td>
-                <td></td>
-            </tr>
-            <tr>
-                <td style="background-color: rgb(186, 223, 53);">1</td>
-                <td style="background-color: rgb(186, 223, 53);">2</td>
-                <td style="background-color: rgb(186, 223, 53);">3</td>
-            </tr>
-            <tr>
-                <td style="background-color: rgb(186, 223, 53);">4</td>
-                <td style="background-color: rgb(186, 223, 53);">5</td>
-                <td style="background-color: rgb(186, 223, 53);">6</td>
-            </tr>
-            <tr>
-                <td style="background-color: rgb(186, 223, 53);">7</td>
-                <td style="background-color: rgb(186, 223, 53);">8</td>
-                <td style="background-color: rgb(186, 223, 53);">9</td>
-            </tr>
-            <tr>
-                <td style="background-color: rgba(89, 188, 157, 0.753);" >C</td>
-                <td style="background-color: rgb(186, 223, 53);">0</td>
-            </tr>
-        </table>
-    </nav>
-        
-    </main>
+</body>
