--- a/sport.html
+++ b/sport.html
@@ -15,7 +15,7 @@
             <li><a href="svg.html"></a>SVG</li>
             <li><a href="https://github.com/torokdora">GitHub</a></li>
             <li><a href="hazik.html">Játékok</a></li>
-            <li><a href="hazifeladat.html">Házik</a></li>
+            <li><a href="bar.html">Házik</a></li>
             
         </ul>
     </nav>
