--- a/x.html
+++ b/x.html
@@ -1,30 +1,3 @@
-<<<<<<< HEAD
-
-    <input type="number" value= "5" onchange="a = Number (this.value)">
-    <input type="number" value= "5" onchange="b = Number (this.value)">
-    <input type="button" value="Katt ide!" onclick="f()">
-    <hr>
-    Kerület: <div id="01"></div>
-    Terület: <div id="02"></div>
-</body>
-
-<style>
-    body {
-        background-color: darkgrey;
-        text-align: center;
-    }
-    div{
-        background-color: azure;
-        font-size: large;
-    }
-</style>
-<script>
-        a = 5, b= 5
-    function f() {
-        document.getElementById("01").innerHTML = 2* (a+b)
-        document.getElementById("02").innerHTML =  (a*b)
-    }
-=======
 <body>
     <input type="number" value= "5" onchange="a = Number (this.value)">
     <input type="number" value= "5" onchange="b = Number (this.value)">
@@ -32,8 +5,8 @@
     <hr>
     Kerület: <div id="01"></div>
     Terület: <div id="02"></div>
-
 </body>
+
 <style>
     body {
         background-color: darkgrey;
@@ -45,10 +18,8 @@
     }
 </style>
 <script>
-        a = 5, b= 5
     function f() {
-        document.getElementById("01").innerHTML = 2* (a+b)
-        document.getElementById("02").innerHTML =  (a*b)
+        document.getElementById("01").innerHTML = 2*(a + b)
+        document.getElementById("02").innerHTML = a*b
     }
->>>>>>> ae9615fc14f0cae82eec4490917345f1d205f13c
 </script>
