--- a/bar.html
+++ b/bar.html
@@ -4,6 +4,7 @@
 
 <menu class="menu">
   <link rel="stylesheet" href="bar.css">
+<a href="x.html">
   <button class="menu__item active" style="--bgColorItem: #966DC5;">
 
     <svg class="icon" viewBox="0 0 24 24">
@@ -13,6 +14,7 @@
     </svg>
   </button>
 
+</a>
     
   
     <button class="menu__item" style="--bgColorItem: #f54888;">
