--- a/keypad.html
+++ b/keypad.html
@@ -4,19 +4,50 @@
     <title> Honlap</title>
 
 </head>
-<body>
-    
-    <nav>
-        <ul>
-            <li><a href="index.html">Kezdőlap</a> </li>
-            <li><a href="bemut.html">Tudj meg rólam többet</a></li>
-            <li><a href="sport.html">Sport</a></li>
-            <li><a href="orarend.html">Órarend</a></li>
-            <li><a href="svg.html">SVG</a></li>
-            <li><a href="https://github.com/torokdora">GitHub</a></li>
-            <li><a href="hazik.html">Játékok</a></li>
-            <li class="active"><a href="hazifeladat.html">Házik</a></li>
-        </ul>
-    </nav>
 
+<body>
+    <link rel="stylesheet" href="keypad.css">
+    <table>
+            <tr>
+                <td>Keypad 1</td>
+                <td></td>
+                <td></td>
+                <td>Keypad 2</td>
+                <td></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>3</td>
+                <td>2</td>
+                <td>1</td>
+            </tr>
+
+            <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>6</td>
+                <td>5</td>
+                <td>4</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+                <td>9</td>
+                <td>8</td>
+                <td>7</td>
+            </tr>
+            <tr>
+                <td>C</td>
+                <td></td>
+                <td>0</td>
+                <td>0</td>
+                <td></td>
+                <td>C</td>
+            </tr>
+    </table>
 </body>
