--- a/keypad.html
+++ b/keypad.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="keypad.css">
     <table>
             <tr>
-                <td>Keypad 1</td>
+                <td style="background-color: rgba(99, 217, 156, 0.892);">Keypad 1</td>
                 <td></td>
                 <td></td>
-                <td>Keypad 2</td>
+                <td style="background-color: rgba(99, 217, 156, 0.892);">Keypad 2</td>
                 <td></td>
                 <td></td>
             </tr>
