--- a/bar.html
+++ b/bar.html
@@ -5,7 +5,7 @@
 <menu class="menu">
   <link rel="stylesheet" href="bar.css">
 
-    <a href="x.html" target="_blank">
+    <a onclick="return false" ondblclick="location=this.href" href="x.html" target="_blank">
       <title></title>
       <button class="menu__item active" style="--bgColorItem: #966DC5;">
         <svg class="icon" viewBox="0 0 24 24">
@@ -18,25 +18,43 @@
 
 
 
-  <a onclick="return false" ondblclick="location=this.href" href="keypad.html" target="_blank">
+  <a onclick="return false" ondblclick="location=this.href" href="keypad.html" target="_blank" >
     <button class="menu__item" style="--bgColorItem: #f54888;">
-      <svg class="icon" viewBox="0 0 24 24">
-        <path d="M6.7,4.8h10.7c0.3,0,0.6,0.2,0.7,0.5l2.8,7.3c0,0.1,0,0.2,0,0.3v5.6c0,0.4-0.4,0.8-0.8,0.8H3.8
-          C3.4,19.3,3,19,3,18.5v-5.6c0-0.1,0-0.2,0.1-0.3L6,5.3C6.1,5,6.4,4.8,6.7,4.8z" />
-        <path d="M3.4,12.9H8l1.6,2.8h4.9l1.5-2.8h4.6" />
+      <svg width="20px" height="20px" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" class="icon1"  >
+        <path d="M5 4a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM5 9a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zM5 14a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5 0a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm0 6a2 2 0 1 1 0-4 2 2 0 0 1 0 4zm5-6a2 2 0 1 1 0-4 2 2 0 0 1 0 4z"/>
       </svg>
     </button>
   </a>
 
-  <a href="keyboard.html">
+  
     <button class="menu__item" style="--bgColorItem: #4343f5;">
-      <svg class="icon" viewBox="0 0 24 24">
-        <path d="M3.4,11.9l8.8,4.4l8.4-4.4" />
-        <path d="M3.4,16.2l8.8,4.5l8.4-4.5" />
-        <path d="M3.7,7.8l8.6-4.5l8,4.5l-8,4.3L3.7,7.8z" />
-      </svg>
+      <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      viewBox="0 0 433.632 433.632" style="enable-background:new 0 0 433.632 433.632;" xml:space="preserve" class="icon2" >
+   <g>
+     <path d="M411.999,130.626H73.567v-5.002c0-5.375,4.373-9.749,9.749-9.749h282.935c13.646,0,24.749-11.103,24.749-24.749
+       c0-13.647-11.103-24.75-24.749-24.75h-68.445c-4.143,0-7.5,3.358-7.5,7.5s3.357,7.5,7.5,7.5h68.445c5.376,0,9.749,4.374,9.749,9.75
+       c0,5.375-4.373,9.749-9.749,9.749H83.316c-13.646,0-24.749,11.103-24.749,24.749v5.002H21.634C9.705,130.626,0,140.332,0,152.26
+       v193.362c0,11.929,9.705,21.633,21.634,21.633h390.365c11.929,0,21.633-9.705,21.633-21.633V152.26
+       C433.632,140.332,423.928,130.626,411.999,130.626z M418.632,345.622c0,3.658-2.976,6.633-6.633,6.633H21.634
+       c-3.658,0-6.634-2.976-6.634-6.633V152.26c0-3.658,2.976-6.634,6.634-6.634h390.365c3.657,0,6.633,2.976,6.633,6.634V345.622z"/>
+     <path d="M401.132,155.627H32.5c-4.143,0-7.5,3.358-7.5,7.5v171.628c0,4.142,3.357,7.5,7.5,7.5h368.632c4.143,0,7.5-3.358,7.5-7.5
+       V163.127C408.632,158.985,405.274,155.627,401.132,155.627z M285.755,170.627h46.438v27.875h-46.438V170.627z M101.438,256.443
+       h46.438v27.937h-46.438V256.443z M70.72,241.443v-27.941h46.438v27.941H70.72z M132.158,241.443v-27.941h46.438v27.941H132.158z
+        M162.877,256.443h46.439v27.937h-46.439V256.443z M193.597,241.443v-27.941h46.438v27.941H193.597z M224.316,256.443h46.438
+       v27.937h-46.438V256.443z M255.035,241.443v-27.941h46.438v27.941H255.035z M285.755,256.443h46.438v27.937h-46.438V256.443z
+        M316.474,241.443v-27.941h32.605v27.941H316.474z M224.316,170.627h46.438v27.875h-46.438V170.627z M162.877,170.627h46.439
+       v27.875h-46.439V170.627z M101.438,170.627h46.438v27.875h-46.438V170.627z M40,170.627h46.438v27.875H40V170.627z M40,213.502
+       h15.72v27.941H40V213.502z M40,256.443h46.438v27.937H40V256.443z M55.72,327.255H40V299.38h15.72V327.255z M117.158,327.255H70.72
+       V299.38h46.438V327.255z M178.597,327.255h-46.438V299.38h46.438V327.255z M240.035,327.255h-46.438V299.38h46.438V327.255z
+        M301.474,327.255h-46.438V299.38h46.438V327.255z M362.912,327.255h-46.438V299.38h46.438V327.255z M393.632,327.255h-15.72
+       V299.38h15.72V327.255z M393.632,284.38h-46.438v-27.937h9.386c4.143,0,7.5-3.358,7.5-7.5v-35.441h29.553V284.38z M393.632,198.502
+       h-46.438v-27.875h46.438V198.502z"/>
+     <path d="M270.119,76.745c-0.022-0.052-0.035-0.082-0.043-0.102C270.114,76.733,270.25,77.053,270.119,76.745z"/>
+     <path d="M282.35,79.185c4.21-4.337,1.792-11.93-4.298-12.735c-5.578-0.738-10.16,5.034-7.932,10.295
+       C272.181,81.619,278.56,82.859,282.35,79.185z"/>
+     <path d="M270.076,76.643C270.065,76.616,270.061,76.608,270.076,76.643L270.076,76.643z"/>
+   </g>
     </button>
-  </a>
 
   
     <button class="menu__item" style="--bgColorItem: #e0b115;">
