--- a/bar.html
+++ b/bar.html
@@ -61,7 +61,7 @@
 </a>
   
 
-  
+<a onclick="return false" ondblclick="location=this.href" href="5házi.html" target="_blank"> 
     <button class="menu__item" style="--bgColorItem: #e0b115;">
       <svg class="icon" viewBox="0 0 24 24">
         <path d="M5.1,3.9h13.9c0.6,0,1.2,0.5,1.2,1.2v13.9c0,0.6-0.5,1.2-1.2,1.2H5.1c-0.6,0-1.2-0.5-1.2-1.2V5.1
@@ -79,6 +79,7 @@
         <path d="M10.4,8.8c0,0.9-0.7,1.6-1.6,1.6c-0.9,0-1.6-0.7-1.6-1.6C7.3,8,8,7.3,8.9,7.3C9.7,7.3,10.4,8,10.4,8.8z" />
       </svg>
     </button>
+</a>  
   
     <div class="menu__border"></div>
   
